Submit button fix on ios.

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,6 @@ input[type="text"],
 input[type="button"],
 input[type="submit"],
 .input-checkbox {
--webkit-appearance: none;
 border-radius: 0;
 }
 
